Add chat functionality

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tawkto-react": "^1.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
